--- a/CSS/review.css
+++ b/CSS/review.css
@@ -4,105 +4,20 @@
     max-width: 400px;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
   
 li {
     display: inline;
 }
 
-/* Slideshow container */
-.slideshow-container {
-  width: 500px;
-  position: relative;
-}
-
-/* Slides */
-.mySlides {
-  display: none;
-  padding: 80px;
-  text-align: center;
-}
-
-/* Next & previous buttons */
-
-.prev, .next {
-  cursor: pointer;
-  position: fixed;
-  top: 50%;
-  width: auto;
-  margin-top: -30px;
-  padding: 16px;
-  color: #888;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-.prev {
-    position: absolute;
-    left: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-.next {
-  position: absolute;
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-  color: white;
-}
-
-.dot-container {
-  width: fit-content;
-  text-align: center;
-  padding: 20px;
-}
-
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-.kan{
-    font-size: x-large;
-}
-
-.kanji {
-    font-size: xx-large;
-}
-
-.kata {
-    font-size: x-large;
-}
-
-.katakana{
-    font-size: xx-large;
-}
-
-.mean{
-    font-size: x-large;
-}
-
 .meaning{
     font-size: xx-large;
+    position: fixed;
+    bottom: 40%;
+    left: 40%;
+    width: 150px;
+    height: 100px;
+    border: 3px solid #73AD21;
+    text-align: center;
 }
 
 
@@ -111,9 +26,7 @@ li {
 \*------------------------------------*/
 @media all and (max-width: 1034px) {
 
-    .slideshow-container {
-        width: 400px
-    }
+    
 }
 
 /*------------------------------------*\
@@ -122,9 +35,7 @@ li {
 
 @media only screen and (max-width: 767px) {
 
-    .slideshow-container {
-        width: 300px
-    }
+   
 }
 
 /*------------------------------------*\
@@ -137,7 +48,5 @@ li {
         width: 300px;
     }
 
-    .slideshow-container {
-        width: 300px
-    }
+
 }
