--- a/CSS/review.css
+++ b/CSS/review.css
@@ -15,8 +15,8 @@ li {
     bottom: 40%;
     left: 40%;
     width: 150px;
-    height: 100px;
-    border: 3px solid #73AD21;
+    height: 125px;
+    border: 3px solid #ff0000;
     text-align: center;
 }
 
